REF #4053  * Trunk 7.1  * that's working now on ie11. Fix by changing the doctype and to remove the meta line "<meta http-equiv="X-UA-Compatible" content="IE=8">"  * Fix bugs displaying in the execution result block:
     ** When I was clicking on "generate gadget URL" button in the sequence part, the look device didn't disappear.
     That's working now. 
 
     ** When I chose XML option in execution mode and when I clicked on "execute here" button in Web app, in the device, display an error. 
     That's working now.

--- a/Studio/tomcat/webapps/convertigo/css/new_style.css
+++ b/Studio/tomcat/webapps/convertigo/css/new_style.css
@@ -120,11 +120,11 @@ a:hover {
 	width: 100%;
 }
 
-#cliplet_div_iframe {
+.cliplet_div_iframe, #cliplet_div_iframe {
 	width: 100%;	
 	height: 600px;
 }
-#window_exe_content_mobile #cliplet_div_iframe {
+#window_exe_content_mobile .cliplet_div_iframe, #window_exe_content_mobile #cliplet_div_iframe {
 	position: absolute;	
 	top: 0;
 	left: 0;
@@ -495,6 +495,7 @@ img {
 	background: inherit;
 	-webkit-border-radius: 2px 0px 0px 2px;
 	border-radius: 2px 0px 0px 2px;
+	z-index:2;
 }
 .lock {
 	width: 3px;
@@ -505,6 +506,7 @@ img {
 	background: inherit;
 	-webkit-border-radius: 0px 2px 2px 0px;
 	border-radius: 0px 2px 2px 0px;
+	z-index:2;
 }
 .camera {
 	background: #3c3d3d;
@@ -518,6 +520,7 @@ img {
 	-moz-border-radius: 100%;
 	-webkit-border-radius: 100%;
 	border-radius: 100%;
+	z-index:2;
 }
 .camera:before {
 	background: #3c3d3d;
@@ -542,6 +545,7 @@ img {
 	-webkit-border-radius: 20px;
 	border-radius: 20px;
 	background: #1e1e1e;
+	z-index:2;
 }
 .inner:before {
 	-webkit-border-radius: 600px / 50px;
@@ -564,7 +568,6 @@ img {
 	width: 100%;
 	position: relative;
 	height: 100%;
-	z-index: 2;
 	text-align: left;
 	text-indent: -999px;
 	display: block;
@@ -572,6 +575,7 @@ img {
 	border-radius: 1px;
 	-webkit-box-shadow: 0 0 0 3px #111;
 	box-shadow: 0 0 0 3px #111;
+	z-index:10;
 }
 .home {
 	-moz-border-radius: 20px;
@@ -585,7 +589,7 @@ img {
 	left: 50%;
 	margin-left: -18px;
 	bottom: 1px;
-	z-index: 3;
+	z-index:2;
 }
 /* Execute window */
 .window_exe {
